# jarvil

./: .gitignore  Cargo.toml  Makefile  README.md  README.rst  common.txt  configure  important snippets  scratch-9.rs
compiler/: Cargo.toml
compiler/jarvil-macros/src/: helper.rs  lib.rs  node.rs  token.rs
compiler/jarvil-macros/src/ast/: node.rs
compiler/src/: builtin.rs  code.rs  context.rs  lib.rs
compiler/src/ast/: ast.rs  impl_ast.rs  iterators.rs  macros.rs  mod.rs  print.rs  traits.rs  walk.rs
compiler/src/codegen/: helper.rs  mod.rs  python.rs
compiler/src/constants/: common.rs  mod.rs
compiler/src/core/: common.rs  mod.rs  string_interner.rs
compiler/src/error/: constants.rs  diagnostics.rs  error.rs  helper.rs  mod.rs
compiler/src/lexer/: helper.rs  lexer.rs  mod.rs  token.rs
compiler/src/parser/: errors.rs  helper.rs  mod.rs  parser.rs  resolver.rs  type_checker.rs
compiler/src/parser/components/: assignment.rs  block.rs  code.rs  common.rs  conditional.rs  interface_declaration.rs  loops.rs  match_case.rs  (+4 more)
compiler/src/scope/: builtin.rs  common.rs  concrete.rs  concrete_types_map.rs  core.rs  errors.rs  function.rs  handler.rs  helper.rs  interfaces.rs  lookup.rs  mangled.rs  mod.rs  namespace.rs  new_core.rs  scope.rs  semantic_db.rs  traits.rs  user_defined_types.rs  variables.rs
compiler/src/types/: arena.rs  array.rs  atomic.rs  core.rs  enum.rs  generic.rs  hashmap.rs  helper.rs  lambda.rs  macros.rs  mod.rs  non_struct.rs  struct.rs  traits.rs  tuple.rs
tools/jarvil-wasm/: Cargo.toml
tools/jarvil-wasm/src/: lib.rs  main.rs
(+287 files in other folders)
