[package]
name = "jarvil-wasm"
version = "0.1.0"
edition = "2018"
authors = ["Bhavya Bhatt bhavyabhatt17@gmail.com"]

[lib]
crate-type = ["cdylib"]

[dependencies]
compiler = { path = "../../compiler" }
wasm-bindgen = "0.2"
miette = { version = "5.3.0"}
owo-colors = "3.5.0"
console_error_panic_hook = "0.1.7"